@@ -1,3 +1,5 @@
+2005-08-10 changed: top button in videoosd is now used for entering dvdmenu
+
 2005-08-07 changed:	adde another font class for the shutdown menu (fontBL) because this certain label was hard to read in PAL
 
 2005-08-06 changed:	home background pictures now disabled on any media instead of just on video (to avoid viz stuttering)
